<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Button Db Backup -->
    <Button android:id="@+id/btnDbBackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_backup_db_to_sd"
        android:layout_marginTop="40dip"
    />

    <!-- Button Db Restore -->
    <Button android:id="@+id/btnDbRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_restore_db_from_sd"
        android:layout_marginTop="20dip"
    />
    
    <!-- Button Recreate Table -->
    <Button android:id="@+id/btnRecreateTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_recreate_table"
        android:layout_marginTop="20dip"
    />
    
    <!-- Button Send Localisation -->
    <Button android:id="@+id/btnSendLocalisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_localisation"
        android:layout_marginTop="20dip"
    />
<!--
        android:text="http://192.168.0.17"
-->    
    <EditText android:id="@+id/edtUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
    />
</LinearLayout> 